Fix for childer content wrapping

--- a/css/style.css
+++ b/css/style.css
@@ -71,47 +71,32 @@ body {
 .level {
 	margin-top: 20px;
 	margin-bottom: 20px;
+	width:100%;
 	position: relative;
 }
 
-.level:nth-of-type(2) {
-	margin-top: 0px;
-}
-.level:last-of-type {
-	margin-bottom: 0px;
-}
-
-.event {
-	height: 165px;
-}
-
-.smallEvent {
-	height: 50px;
+.level:after { 
+   content: " ";
+   display: block; 
+   height: 0; 
+   clear: both;
 }
 
 .info {
 	background: #f4f4f4;
 	padding: 10px;
 	width: 390px;
-	height: 145px;
-	position: absolute;
-}
-
-.smallEvent .info {
-	height: 30px;
-	line-height: 30px;
 }
 
 .info.leftInfo {
-	left: 0px;	
+	float:left;	
 }
 
 .info.rightInfo {
-	right: 0px;	
+	float:right;	
 }
 
-.info:after,
-.info:before {
+.info:after {
 	content: "";
 	display: block;
 	width: 0; 
@@ -120,32 +105,15 @@ body {
 	top: 0px;
 }
 
-.info:before {
-	background: #f4f4f4;
-	width: 5px;
-	height: 30px;
-	border-radius: 2px;
-}
-
-.info.leftInfo:before {
-	right: -15px;
-	margin-right: 14px;
-}
-
 .info.leftInfo:after {
-	right: -15px;
+	left: 410px;
 	border-top: 15px solid transparent;
 	border-bottom: 15px solid transparent;
 	border-left: 15px solid #f4f4f4;
 }
 
-.info.rightInfo:before {
-	left: -15px;
-	margin-left: 14px;
-}
-
 .info.rightInfo:after {
-	left: -15px;
+	right: 410px;
 	border-top: 15px solid transparent;
 	border-bottom: 15px solid transparent; 
 	border-right:15px solid #f4f4f4; 
@@ -219,7 +187,6 @@ body {
 .info p {
 	margin: 0px;
 	padding: 0px;
-	height: 95px;
 	overflow: hidden;
 	margin-bottom: 5px;
 	text-overflow: ellipsis;
